--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "bao",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://fruityvice.com/api/fruit/all",
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
